--- a/pom.xml
+++ b/pom.xml
@@ -56,13 +56,23 @@
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>4.1.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
 		<dependency>
 			<groupId>com.relevantcodes</groupId>
 			<artifactId>extentreports</artifactId>
 			<version>2.41.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -71,13 +81,11 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 				<configuration>
-					<!--<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
-					</suiteXmlFiles>-->
-					<!--This is default-->
 					<suiteXmlFiles>
+						<!--This is default-->
+						<suiteXmlFile>testng.xml</suiteXmlFile>
 						<!-- pass testng.xml files as argument from command line -->
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<!--<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
 						<!-- to run in cmd - mvn clean test -Dsurefire.suiteXmlFiles=/path-to-testng.xml-->
 					</suiteXmlFiles>
 				</configuration>
